--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,52 @@
+*{
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #f7fafc;
+}
+
 .App {
   padding: 0 30px;
+}
+
+.new-comment{
+  border-radius: .5rem;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,.1), 0 4px 6px -2px rgba(0,0,0,.05) ;
+  padding: 1rem;
+}
+
+.new-comment h2{
+  margin: 0;
+}
+
+.new-comment input{
+  width: 300px;
+}
+
+.new-comment textarea{
+  width: 100%;
+}
+
+.new-comment button{
+  background-color: #4299e1;
+  color: #fff;
+  font-size: 1rem;
+  padding: .5rem;
+  border-radius: .5rem;
+  border: none;
+}
+
+.new-comment button:hover{
+  background-color: #2b6ce0;
+}
+
+.new-comment input, .new-comment textarea{
+  color: #4a5568;
+  background-color: #fff;
+  border: 1px solid #e2e8f0;
+  font-size: 1rem;
+  padding: .5rem 1rem;
+  margin: 1rem;
+  border-radius: .5rem;
 }
